fix: Improve modal close functionality by checking multiple class names

--- a/src/blog/templates/blog/includes/image-modal.html
+++ b/src/blog/templates/blog/includes/image-modal.html
@@ -39,7 +39,15 @@
 
     // Close modal if the user clicks anywhere outside of the modals content
     modal.addEventListener('click', (e) => {
-        if(e.target.className === 'image-modal') {
+        const className = e.target.className;
+
+        if(className.includes('image-modal')) {
+            modal.style.display = "none";
+        } else if (className.includes('image-modal-content')) {
+            modal.style.display = "none";
+        } else if (className.includes('image-modal-image')) {
+            modal.style.display = "none";
+        } else if (className.includes('image-modal-caption')) {
             modal.style.display = "none";
         }
     })
