--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -94,6 +94,11 @@
                             {% quick_drink_add_buttons %}
                         </div>
                     </li>
+                    <li class="px-4 mt-4">
+                        <div id="quick-drink-add-container" class="p-4 bg-slate-100  rounded-b-3xl border-slate-500">
+                            {% quick_animal_add_buttons %}
+                        </div>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
