feat: put the counter on mobile devices too

--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -107,6 +107,7 @@
     <div class="flex items-center gap-2 px-4 pb-2 sm:hidden">
         {% include "blog/includes/brazil-time.html" %}
         {% show_total_drinks_consumed %}
+        {% show_total_animals_spotted %}
     </div>
 </header>
 
