feat: Implement toast notifications for subscription status updates and refactor notification function

--- a/src/blog/templates/blog/includes/subscribe-author.html
+++ b/src/blog/templates/blog/includes/subscribe-author.html
@@ -33,7 +33,8 @@
             .then(response => response.json())
             .then(data => {
                 this.textContent = data.subscribed ? '🔕' : '🔔';
-                this.title = data.subscribed ? 'Unsubscribe' : 'Subscribe';
+                this.title = data.subscribed ? 'Abonnement opzeggen' : 'Abonneren';
+                showToast(data.message);
             })
             .finally(() => {
                 this.disabled = false;
